--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@webtor/player-sdk-js": "^0.2.12",
     "expo": "~38.0.8",
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
@@ -27,7 +28,10 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-select-lists": "^1.0.1",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "^11.2.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
